put step metrics chart inside a collapseable panel to be consistent with other panel-based content area; removed #step-metrics-chart (no longer needed) from app.css.

--- a/jberet-ui/app/app.css
+++ b/jberet-ui/app/app.css
@@ -40,11 +40,6 @@ button {
   min-width: 11ch;
 }
 
-#step-metrics-chart {
-  margin-left: 5em;
-  margin-top: 2em;
-}
-
 .not-active {
   pointer-events: none;
   cursor: default;
